<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.denis.counter.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buttonHelloText"
        android:id="@+id/buttonHello"
        android:onClick="onClickButtonHello"
        android:clickable="false"
        android:layout_gravity="center"
        android:layout_below="@+id/InfoTextView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="98dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crowsCounterButtonText"
        android:id="@+id/crowsCounterButton"
        android:onClick="onClickCrowsCounterButton"
        android:clickable="false"
        android:layout_below="@+id/buttonHello"
        android:layout_alignRight="@+id/buttonHello"
        android:layout_alignEnd="@+id/buttonHello"
        android:layout_gravity="left" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/catsButtonText"
        android:id="@+id/counterOfCatsButton"
        android:onClick="onClickCounterOfCatsButton"
        android:clickable="false"
        android:layout_below="@+id/crowsCounterButton"
        android:layout_alignRight="@+id/crowsCounterButton"
        android:layout_alignEnd="@+id/crowsCounterButton"
        android:layout_alignLeft="@+id/buttonHello"
        android:layout_alignStart="@+id/buttonHello"
        android:layout_gravity="center" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crowsAndCatsCountersButtonText"
        android:id="@+id/crowsAndCatsCountersButton"
        android:onClick="onClickCrowsAndCatsCountersButton"
        android:clickable="false"
        android:layout_below="@+id/counterOfCatsButton"
        android:layout_alignRight="@+id/counterOfCatsButton"
        android:layout_alignEnd="@+id/counterOfCatsButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resetCountersButtonText"
        android:id="@+id/resetCountersButton"
        android:onClick="onClickResetCountersButton"
        android:clickable="false"
        android:layout_below="@+id/crowsAndCatsCountersButton"
        android:layout_alignRight="@+id/crowsAndCatsCountersButton"
        android:layout_alignEnd="@+id/crowsAndCatsCountersButton"
        android:layout_alignLeft="@+id/crowsCounterButton"
        android:layout_alignStart="@+id/crowsCounterButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exitButtonText"
        android:id="@+id/exitButton"
        android:onClick="onClickExitButton"
        android:clickable="false"
        android:layout_below="@+id/resetCountersButton"
        android:layout_alignRight="@+id/resetCountersButton"
        android:layout_alignEnd="@+id/resetCountersButton"
        android:layout_alignLeft="@+id/counterOfCatsButton"
        android:layout_alignStart="@+id/counterOfCatsButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/InfoTextView"
        android:clickable="false"
        android:layout_alignRight="@+id/buttonHello"
        android:layout_alignEnd="@+id/buttonHello"
        android:layout_alignLeft="@+id/crowsAndCatsCountersButton"
        android:layout_alignStart="@+id/crowsAndCatsCountersButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:clickable="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/maidByDenis" />

</RelativeLayout>
